# scantailor-advanced

cli/: create_project_from_dir.py
cli/sample/: README.md  generate_project.py  project.ScanTailor  scantailor-cli.conf
cli/sample/in/: project.ScanTailor
src/: CMakeLists.txt
src/app/: MainWindow.cpp
src/cli/: CMakeLists.txt  CliConfig.cpp  CliConfig.h  CliPageSelectionProvider.cpp  CliPageSelectionProvider.h  NoOpFilterUiInterface.cpp  NoOpFilterUiInterface.h  ProjectGeneratorFromDir.cpp  ProjectGeneratorFromDir.h  main.cpp
src/core/: BatchPipeline.cpp  BatchPipeline.h  CMakeLists.txt  WorkerThreadPool.cpp  WorkerThreadPool.h
src/core/filters/deskew/: Task.cpp
